--- a/colorGame.html
+++ b/colorGame.html
@@ -4,7 +4,8 @@
 	<link rel="stylesheet" type="text/css" href="colorGame.css">
 </head>
 <body>
-	<h1>i have successfully edited the heading <span id = "colorDisplay">rgb</span> game</h1>
+	<h1>not color ok <span id = "colorDisplay">rgb</span> game</h1>
+	<h2> i have added another heading to backagain project</h2>
 	<div>
 		<span id="message"></span>
 	</div>
