trying to create my own branch

--- a/colorGame.html
+++ b/colorGame.html
@@ -5,8 +5,7 @@
 </head>
 <body>
 	<h1>not color ok <span id = "colorDisplay">rgb</span> game</h1>
-	<h2> i have added another heading to backagain project</h2>
-	<div>
+	<h2>editing has been continued for again </h2>
 		<span id="message"></span>
 	</div>
 
