trying with new energy

--- a/colorGame.html
+++ b/colorGame.html
@@ -4,8 +4,8 @@
 	<link rel="stylesheet" type="text/css" href="colorGame.css">
 </head>
 <body>
-	<h1>not color ok <span id = "colorDisplay">rgb</span> game</h1>
-	<h2>editing has been continued for again </h2>
+	<h1>not color ok,but also ok <span id = "colorDisplay">rgb</span> game</h1>
+
 		<span id="message"></span>
 	</div>
 
