--- a/colorGame.html
+++ b/colorGame.html
@@ -4,8 +4,8 @@
 	<link rel="stylesheet" type="text/css" href="colorGame.css">
 </head>
 <body>
-	<h1>not color ok,but also ok <span id = "colorDisplay">rgb</span> game</h1>
-
+	<h1>not color ok. but whatever oulike <span id = "colorDisplay">rgb</span> game</h1>
+	<div>
 		<span id="message"></span>
 	</div>
 
